Added plotWeights() to show best des. real'n for each weight.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(drawDiagram)
 export(findSCdesigns)
 export(findSimonDesigns)
 export(findSingleSimonDesign)
+export(plotWeights)
 export(singlearmDesign)
 export(twoarmDesign)
 import(clinfun)
