Roxygen updating export list.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,11 @@ S3method(drawDiagram,curtailment_simon)
 S3method(drawDiagram,curtailment_single)
 S3method(drawDiagram,curtailment_twoarm)
 export(SCfn)
+export(createPlotAndBoundsSimonNSCreview)
+export(createPlotAndBoundsSimonReview)
 export(drawDiagram)
+export(findLoss)
+export(findNSCdesigns)
 export(findSCdesigns)
 export(findSimonDesigns)
 export(findSingleSimonDesign)
