Added fn to draw generic trial plots. Renamed findSimonDesigns to find2stageDesigns.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,10 +8,10 @@ export(SCfn)
 export(createPlotAndBoundsSimonNSCreview)
 export(createPlotAndBoundsSimonReview)
 export(drawDiagram)
+export(find2stageDesigns)
 export(findLoss)
 export(findNSCdesigns)
 export(findSCdesigns)
-export(findSimonDesigns)
 export(findSingleSimonDesign)
 export(plotWeights)
 export(singlearmDesign)
