exported fn drawDiagramGeneric and fixed warning.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(SCfn)
 export(createPlotAndBoundsSimonNSCreview)
 export(createPlotAndBoundsSimonReview)
 export(drawDiagram)
+export(drawDiagramGeneric)
 export(find2stageDesigns)
 export(findLoss)
 export(findNSCdesigns)
