Much tidying based on devtools::check().

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,6 @@ S3method(drawDiagram,curtailment_simon)
 S3method(drawDiagram,curtailment_single)
 S3method(drawDiagram,curtailment_twoarm)
 S3method(drawDiagram,power.htest)
-export(SCfn)
-export(createPlotAndBoundsSimonNSCreview)
-export(createPlotAndBoundsSimonReview)
 export(drawDiagram)
 export(drawDiagramGeneric)
 export(find2stageDesigns)
@@ -14,7 +11,7 @@ export(findLoss)
 export(findNSCdesigns)
 export(findSCdesigns)
 export(findSingleSimonDesign)
-export(plotWeights)
+export(plotByWeight)
 export(singlearmDesign)
 export(twoarmDesign)
 import(data.table)
