--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,3 +21,9 @@ import(grid)
 import(gridExtra)
 import(pkgcond)
 import(stats)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,pdf)
+importFrom(utils,combn)
+importFrom(utils,head)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,txtProgressBar)
