--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,7 @@ Authors@R:
            role = c("aut", "cre"),
            email = "martin.law@mrc-bsu.cam.ac.uk",
            comment = c(ORCID = "0000-0001-9594-348X"))
+Maintainer: Martin Law <martin.law@mrc-bsu.cam.ac.uk>
 Description: The curtailment package finds single- and two-arm designs using stochastic curtailment, as described by Law et al. (2019) <arXiv:1909.03017> and Law et al (2021) <doi:10.1002/pst.2067> respectively. Designs can be single-stage or multi-stage. Non-stochastic curtailment is possible as a special case. Desired error-rates, maximum sample size and lower and upper anticipated response rates are inputted and suitable designs are returned with operating characteristics. Stopping boundaries and visualisations are also available. The package can find designs using other approaches, for example designs by Simon (1989) <doi:10.1016/0197-2456(89)90015-9> and Mander and Thompson (2010) <doi:10.1016/j.cct.2010.07.008>. Other features: compare and visualise designs using a weighted sum of expected sample sizes under the null and alternative hypotheses and maximum sample size; visualise any binary outcome design.
 License: GPL (>= 3)
 Encoding: UTF-8
