Updated version (now has min. stopping sample size)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,13 +17,72 @@ export(twoarmDesign)
 import(data.table)
 import(ggplot2)
 import(ggthemes)
-import(grid)
-import(gridExtra)
 import(pkgcond)
 import(stats)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
+importFrom(utils,"(Ess),")
+importFrom(utils,"(EssH0),")
+importFrom(utils,"(Mander")
+importFrom(utils,"(Simon's")
+importFrom(utils,"(n)")
+importFrom(utils,"Thompson's")
+importFrom(utils,"best")
+importFrom(utils,"design)")
+importFrom(utils,"design).")
+importFrom(utils,"for")
+importFrom(utils,"function")
+importFrom(utils,"in")
+importFrom(utils,"p=p0")
+importFrom(utils,"p=p1")
+importFrom(utils,"parameters,")
+importFrom(utils,"realisations,")
+importFrom(utils,"two-stage")
+importFrom(utils,Find)
+importFrom(utils,It)
+importFrom(utils,This)
+importFrom(utils,a)
+importFrom(utils,all)
+importFrom(utils,allowing)
+importFrom(utils,and)
+importFrom(utils,any)
+importFrom(utils,at)
+importFrom(utils,be)
+importFrom(utils,benefit)
+importFrom(utils,but)
+importFrom(utils,combination)
 importFrom(utils,combn)
+importFrom(utils,considered)
+importFrom(utils,could)
+importFrom(utils,criteria.)
+importFrom(utils,design)
+importFrom(utils,designs)
+importFrom(utils,expected)
+importFrom(utils,finds)
+importFrom(utils,given)
 importFrom(utils,head)
+importFrom(utils,interim)
+importFrom(utils,maximum)
+importFrom(utils,minimax)
+importFrom(utils,no)
+importFrom(utils,not)
+importFrom(utils,of)
+importFrom(utils,only)
+importFrom(utils,optimal)
+importFrom(utils,optimality)
+importFrom(utils,or)
+importFrom(utils,realisations)
+importFrom(utils,returns)
+importFrom(utils,sample)
+importFrom(utils,set)
 importFrom(utils,setTxtProgressBar)
+importFrom(utils,size)
+importFrom(utils,stopping)
+importFrom(utils,terms)
+importFrom(utils,that)
+importFrom(utils,the)
+importFrom(utils,these)
+importFrom(utils,three)
 importFrom(utils,txtProgressBar)
+importFrom(utils,under)
+importFrom(utils,weighted)
