--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,3 +14,16 @@ export(findSingleSimonDesign)
 export(plotByWeight)
 export(singlearmDesign)
 export(twoarmDesign)
+import(data.table)
+import(ggplot2)
+import(ggthemes)
+import(grid)
+import(gridExtra)
+import(pkgcond)
+import(stats)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,pdf)
+importFrom(utils,combn)
+importFrom(utils,head)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,txtProgressBar)
