--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,3 +22,6 @@ Imports:
     stats
 URL: https://github.com/martinlaw/curtailment
 BugReports: https://github.com/martinlaw/curtailment/issues
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
