--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,9 @@ S3method(drawDiagram,curtailment_simon)
 S3method(drawDiagram,curtailment_single)
 S3method(drawDiagram,curtailment_twoarm)
 S3method(drawDiagram,power.htest)
+S3method(plot,curtailment_2stage)
+S3method(plot,curtailment_single)
+S3method(print,curtailment_simon)
 export(drawDiagram)
 export(drawDiagramGeneric)
 export(find2stageDesigns)
